# salus-lilac

./: .gitignore  README.md
actuators/: CMakeLists.txt  prj.conf
actuators/boards/: nrf52840dk_nrf52840.overlay
actuators/src/: main.c
base/: CMakeLists.txt  README.md  prj.conf  sysbuild.conf
base/boards/: disco_l475_iot1.overlay
base/include/: blockchain.h  bluetooth.h  event.h  fs.h  keypad.h  mqtt.h  sensor.h  servo.h  user.h
base/lib/: blockchain.c  bluetooth.c  event.c  fs.c  keypad.c  mqtt.c  sensor.c  servo.c  user.c
base/src/: main.c
base/sysbuild/: mcuboot.conf
blockchain/: CMakeLists.txt  prj.conf
blockchain/src/: main.c
bluetooth/: CMakeLists.txt  prj.conf
bluetooth/src/: main.c
bluetooth_m5/: prj.conf
bluetooth_m5/src/: central_gatt_write.c  main.c
fs/: CMakeLists.txt  README.md  prj.conf  sample.yaml
fs/include/: rtc_lib.h  sensor_interface.h
fs/mylib/: consumer.c  humidity.c  magnetometer.c  pressure.c  sensor_interface.c  temperature.c
fs/src/: main.c
keypad/: CMakeLists.txt  prj.conf
keypad/boards/: disco_l475_iot1.overlay
keypad/src/: main.c
mcuboot/: README.md
mcuboot/task1/: CMakeLists.txt  README.md  prj.conf  sample.yaml
mcuboot/task2/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
mcuboot/task3/: CMakeLists.txt  README.rst  prj.conf  (+1 more)
mobile/: CMakeLists.txt  README.md  prj.conf
mqtt_publisher/: overlay-wifi.conf  prj.conf
mqtt_publisher_wifi/: prj.conf
pc_software/: .env.example  .gitignore  README.md  gui.py  main.py  recognition.py  requirements.txt  send_file.py
sensors/: prj.conf
(+26 files in other folders)
